--- a/rockPaperScissors-front/src/app/header/header.component.html
+++ b/rockPaperScissors-front/src/app/header/header.component.html
@@ -1,1 +1,15 @@
 <p>header works!</p>
+
+<!-- NO AUTH REQUIRED -->
+<div *ngIf="showNoAuthSection">
+    <button (click)="home()">Home</button>
+    <button (click)="login()">Login</button>
+    <button (click)="register()">Register</button>
+  </div>
+  
+  <!-- AUTH REQUIRED -->
+  <div *ngIf="showAuthSection">
+    <button (click)="home()">Home</button>
+    <button (click)="logout()">Logout</button>
+  </div>
+  
