--- a/rockPaperScissors-front/src/app/login/login.component.html
+++ b/rockPaperScissors-front/src/app/login/login.component.html
@@ -1,1 +1,34 @@
-<p>login works!</p>
+<div style="margin-left: auto; margin-right: auto">
+  <p id="loginFeedback"></p>
+</div>
+<div>
+  <h1>Login</h1>
+  <form [formGroup]="loginForm" (ngSubmit)="login()">
+    <div>
+      <label for="username">Username: </label>
+      <input type="text" [formControl]="username" />
+    </div>
+
+    <div>
+      <label for="password">Password: </label>
+      <input type="password" [formControl]="password" />
+    </div>
+
+    <button type="submit" [disabled]="!loginForm.valid">Login</button>
+  </form>
+</div>
+
+<div *ngIf="username.errors">
+  <span style="color: red" *ngIf="username.errors && (username.touched || username.dirty)">
+    <span *ngIf="username.errors['required']">Username is required</span>
+    <div *ngIf="username.errors['pattern']">Username not a valid format.</div>
+  </span>
+</div>
+
+<div *ngIf="password.errors">
+  <span style="color: red" *ngIf="password.errors && (password.touched || password.dirty)">
+    <span *ngIf="password.errors['required']">Password is required</span>
+    <span *ngIf="password.errors['minlength']">Password must be greater tha 8 characters</span>
+    <span *ngIf="password.errors['maxlength']">Password can be max 16 characters long</span>
+  </span>
+</div>
