Added header and footer

--- a/rockPaperScissors-front/src/app/Shared/components/footer/footer.component.html
+++ b/rockPaperScissors-front/src/app/Shared/components/footer/footer.component.html
@@ -1,1 +1,17 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="footer-content">
+        <p>© 2024 - Developed by Roberto Godina</p>
+        <p>
+            Built with 💻 and ❤️ | <a href="https://angular.io/" target="_blank">Angular</a> &
+            <a href="https://spring.io/projects/spring-boot" target="_blank">Spring Boot</a>
+        </p>
+        <div class="social-icons">
+            <a href="https://github.com/RobertoGodina/rockPaperScissors" target="_blank" aria-label="GitHub">
+                <mat-icon>code</mat-icon>
+            </a>
+            <a href="https://www.linkedin.com/in/roberto-godina-4711a8245/" target="_blank" aria-label="LinkedIn">
+                <mat-icon>work</mat-icon>
+            </a>
+        </div>
+    </div>
+</footer>
