--- a/rockPaperScissors-front/src/app/Game/components/play/play.component.scss
+++ b/rockPaperScissors-front/src/app/Game/components/play/play.component.scss
@@ -83,6 +83,7 @@
 .center-actions {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 20px;
     margin-top: 40px;
 }
@@ -104,8 +105,24 @@ button {
 button:hover {
     transform: scale(1.1);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+    color: black;
 }
 
 button:active {
     transform: scale(0.95);
+    color: black;
+}
+
+/* Ajuste responsivo para pantallas pequeñas */
+@media (max-width: 600px) {
+    .center-actions {
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    button {
+        min-width: 80%;
+        padding: 10px 15px;
+        font-size: 16px;
+    }
 }
