--- a/rockPaperScissors-front/src/styles.scss
+++ b/rockPaperScissors-front/src/styles.scss
@@ -1,4 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body>app-root {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+.main-content {
+    flex-grow: 1;
+}
+
+.footer {
+    margin-top: auto;
+}
