Added stats view

--- a/rockPaperScissors-front/src/app/Shared/components/header/header.component.html
+++ b/rockPaperScissors-front/src/app/Shared/components/header/header.component.html
@@ -10,6 +10,7 @@
   <div *ngIf="showAuthSection" class="menu">
     <button mat-raised-button color="primary" (click)="play()">Play</button>
     <button mat-raised-button color="accent" (click)="profile()">Profile</button>
+    <button mat-raised-button color="accent" (click)="stats()">Stats</button>
     <button mat-raised-button color="warn" (click)="logout()">Logout</button>
   </div>
 </nav>
