--- a/rockPaperScissors-front/src/app/Shared/components/header/header.component.html
+++ b/rockPaperScissors-front/src/app/Shared/components/header/header.component.html
@@ -1,6 +1,7 @@
 <nav class="header">
   <div class="logo">
-    <span>🎮 GameZone</span>
+    <img src="assets/favicon.ico" alt="GameZone Logo" class="logo-img">
+    <span class="logo-text">Rock Paper Scrissors</span>
   </div>
   <div *ngIf="showNoAuthSection" class="menu">
     <button mat-raised-button color="primary" (click)="play()"> Play</button>
