--- a/rockPaperScissors-front/src/app/Game/components/play/play.component.html
+++ b/rockPaperScissors-front/src/app/Game/components/play/play.component.html
@@ -1,6 +1,9 @@
 <div class="game-container mat-typography">
     <mat-card>
         <mat-card-content>
+
+
+
             <div class="choices-container">
                 <!-- Computer choise -->
                 <div class="choice-section">
@@ -21,6 +24,31 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Score section -->
+            <div *ngIf="showScore; else test" class="score-section">
+                <mat-card-header>
+                    <mat-card-title>Your Score</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <div *ngIf="animate; else showScoreContent" class="spinner-container">
+                        <mat-spinner diameter="50"></mat-spinner>
+                    </div>
+                    <ng-template #showScoreContent>
+                        <h2>{{ (gameState$ | async)?.score }}</h2>
+                        <div *ngIf="(gameState$ | async)?.result === 'WIN'">
+                            <h3>{{ (gameState$ | async)?.consecutiveWon }} Consecutive Wins! You earned + {{ (gameState$
+                                |
+                                async)?.consecutiveWon! * 100}} points!</h3>
+                        </div>
+
+                    </ng-template>
+                </mat-card-content>
+
+            </div>
+            <ng-template #test>
+                <h3>Log in to show your score</h3>
+            </ng-template>
 
             <!-- Result section -->
             <div class="result-section" *ngIf="!animate && (gameState$ | async)?.result">
