--- a/rockPaperScissors-front/src/app/Game/components/play/play.component.scss
+++ b/rockPaperScissors-front/src/app/Game/components/play/play.component.scss
@@ -125,3 +125,36 @@ button:active {
         font-size: 16px;
     }
 }
+
+.score-section {
+    margin-bottom: 20px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    color: #333;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.score-section mat-card-header {
+    text-align: center;
+    justify-content: center;
+}
+
+.score-section h2 {
+    font-size: 36px;
+    font-weight: bold;
+    color: black;
+    margin: 0;
+    /* Elimina el espacio extra alrededor del texto */
+    text-align: center;
+}
+
+.spinner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+}
