--- a/rockPaperScissors-front/src/app/Stats/components/stats.component.html
+++ b/rockPaperScissors-front/src/app/Stats/components/stats.component.html
@@ -50,6 +50,10 @@
                         <th mat-header-cell *matHeaderCellDef>Result</th>
                         <td mat-cell *matCellDef="let game">{{ game.result }}</td>
                     </ng-container>
+                    <ng-container matColumnDef="score">
+                        <th mat-header-cell *matHeaderCellDef>Score</th>
+                        <td mat-cell *matCellDef="let game">{{ game.score }}</td>
+                    </ng-container>
                     <ng-container matColumnDef="playedAt">
                         <th mat-header-cell *matHeaderCellDef>Date</th>
                         <td mat-cell *matCellDef="let game">{{ game.playedAt | date: 'short' }}</td>
